interstellar/tests/snapshots/gql_snapshots__parse_complex_query_snapshot.snap
---
source: tests/gql_snapshots.rs
expression: ast
---
match_clause:
  patterns:
    - elements:
        - Node:
            variable: p
            labels:
              - Person
            properties:
              - - name
                - String: Alice
            where_clause: ~
        - Edge:
            variable: ~
            labels:
              - KNOWS
            direction: Outgoing
            quantifier: ~
            properties: []
            where_clause: ~
        - Node:
            variable: friend
            labels:
              - Person
            properties: []
            where_clause: ~
optional_match_clauses: []
with_path_clause: ~
unwind_clauses: []
where_clause:
  expression:
    BinaryOp:
      left:
        BinaryOp:
          left:
            Property:
              variable: friend
              property: age
          op: Gt
          right:
            Literal:
              Int: 25
      op: And
      right:
        BinaryOp:
          left:
            Property:
              variable: friend
              property: city
          op: Eq
          right:
            Literal:
              String: NYC
call_clauses: []
let_clauses: []
with_clauses: []
return_clause:
  distinct: false
  items:
    - expression:
        Property:
          variable: friend
          property: name
      alias: ~
    - expression:
        Property:
          variable: friend
          property: age
      alias: ~
group_by_clause: ~
having_clause: ~
order_clause:
  items:
    - expression:
        Property:
          variable: friend
          property: age
      descending: true
limit_clause:
  limit: 10
  offset: ~
