interstellar/tests/snapshots/gql_snapshots__parse_create_edge_type_basic_snapshot.snap
---
source: tests/gql_snapshots.rs
expression: stmt
---
Ddl:
  CreateEdgeType:
    name: KNOWS
    properties:
      - name: since
        prop_type: Int
        required: false
        default: ~
    from_types:
      - Person
    to_types:
      - Person
